feat(client): initialize Angular client application with basic structure and configuration
- Added package.json with Angular and Tailwind CSS dependencies.
- Included favicon and user image in the public directory.
- Created app configuration file for routing and HTTP client setup.
- Added main application component with HTTP request to fetch members.
- Defined application routes and created a basic HTML template for displaying members.
- Implemented unit tests for the application component.
- Configured TypeScript settings for the application and tests.
- Set up global styles with Tailwind CSS and DaisyUI.

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "TokenKey" : "%tBkLo^^[H(6*RF9pki$53xH!&L8TAYYyxOmkzP|T4WGJ}sr{i(Le3FuF7f;j2vmQ"
 }
